[tool.poetry]
name = "mybus"
version = "0.1.0"
description = "scrapping mybuswebsite"
authors = ["hesolean <lndubourg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
